[package]
name = "intention_tester"
version = "0.1.0"
authors = ["JBGriesner <jb.griesner@qwant.com>"]
edition = "2018"
license = "MIT"
description = "A tool to test intention detection API"
readme = "README.md"
homepage = "https://github.com/QwantResearch/intention_tester"
repository = "https://github.com/QwantResearch/intention_tester"
keywords = ["cli", "nlu", "test"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.2.10"
log = "0.4"
env_logger = "0.6.1"
failure = "0.1"
csv = "1"
serde = "1"
serde_derive = "1"
hyper = "0.12"
reqwest = "0.9.11"
serde_json = "1.0"
rusty-machine="0.5.4"
